adjusted margins, alignment of sections, fixed responsiveness

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,8 +2,13 @@
     box-sizing: border-box;
 }
 
-body {
+body, html {
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 100%;
+    overflow-x:hidden;
+    margin: 0px;
+    padding: 0px;
 }
 
 /*Header*/
@@ -11,7 +16,7 @@ body {
 header {
     padding: 20px;
     background: transparent;
-    margin-left: 25px;
+    position: relative;
 }
 
 header h1 {
@@ -27,7 +32,6 @@ nav {
     font-size: 20px;
     display:inline-block;
     background: transparent;
-    margin-right: 25px;
 }
 
 nav li {
@@ -39,6 +43,7 @@ nav a {
     color: black;
     text-decoration: none;
 }
+
 
 /* Centered text on hero image*/
 
@@ -53,25 +58,38 @@ nav a {
     font-weight: bold;
 }
 
+
 /*Hero Image*/
 
+figure {
+    position: relative;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+
+}
+
 .hero-image {
-    height: 800px;
     width: 100%;
     margin-top: 0;
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
+    position: relative;
 }
 
 /*Main Content*/
 
 main {
-    flex: 100%;
+    width: 100%;
     background-color: white; 
     padding: 20px;
-    margin-left: 25px;
-    margin-right: 25px;
+    
+    
+}
+
+h2 {
+    text-align: center;
 }
 
 /*Headshot Image*/
@@ -82,6 +100,16 @@ main {
     max-height: 200px;
 
 }
+
+.clearfix {
+    overflow: auto;
+  }
+
+  .clearfix::after {
+    content: "";
+    clear: both;
+   display: table;
+  } 
 
 /*Portfolio Grid and Images*/
 
@@ -98,8 +126,9 @@ main {
 }
 
 .column {
-    flex: 33.33%;
-    max-width: 33.33%;
+    flex-basis: 33.33%;
+    flex-shrink: 0;
+    flex-grow: 0;
     padding: 0 4px;
 }
   
@@ -153,6 +182,10 @@ main {
 
 /*Contact Section*/
 
+.contact-info {
+    display: flex;
+}
+
 .contact li {
     display: flex;
     list-style: none;
@@ -165,7 +198,6 @@ main {
 }
 
 .container2 {
-    width: 900px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -188,22 +220,23 @@ footer {
 
 @media screen and (max-width: 800px) {
     .column {
-      flex: 50%;
-      max-width: 50%;
+      flex-basis: 50%;
     }
   }
   
 
   @media screen and (max-width: 768px) {
      .column {
-        flex: 100%;
-        max-width: 100%;
+        flex-basis: 100%;
     }
   }
 
   @media screen and (max-width: 600px) {
     .column {
-      flex: 100%;
-      max-width: 100%;
+      flex-basis: 100% !important;
     }
-  }
+
+    .contact-info {
+        flex-direction: column;
+    }
+}
